# wordSnap

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TESTING_GUIDELINES.md
.github/workflows/: ci-unit-integration.yml  nightly-ui-e2e-smoke.yml
docs/: ARCHITECTURE.md  CI_FAILURE_PLAYBOOK.md  FUTURE.md  PLAN.md  TDD_CORE.md  TDD_PLAN.md  TODOLIST.md  requirements-status.md
installer/windows/: wordSnapV1.iss
scripts/: first_push.ps1
scripts/release/windows/: package-win.ps1  publish-release.ps1
src/: main.cpp
src/app/: AiAssistPolicy.cpp  AiAssistPolicy.h  AppController.cpp  AppController.h  AppTypes.h  LookupCoordinator.cpp  LookupCoordinator.h
src/platform/win/: GlobalHotkeyManager.cpp  GlobalHotkeyManager.h  StartupLaunchManager.cpp  StartupLaunchManager.h
src/resources/: wordSnap.qrc
src/services/: AiAssistService.cpp  AiAssistService.h  DictionaryService.cpp  DictionaryService.h  ImagePreprocessor.cpp  ImagePreprocessor.h  OcrService.cpp  OcrService.h  PhoneticExtractor.cpp  PhoneticExtractor.h  QueryHistoryService.cpp  QueryHistoryService.h  ScreenCaptureService.cpp  ScreenCaptureService.h  SettingsService.cpp  SettingsService.h  StarDictBackend.cpp  StarDictBackend.h  TesseractExecutableResolver.cpp  TesseractExecutableResolver.h  WordNormalizer.cpp  WordNormalizer.h
src/ui/: CaptureOverlay.cpp  CaptureOverlay.h  HistoryDialog.cpp  HistoryDialog.h  ResultCardWidget.cpp  ResultCardWidget.h  SettingsDialog.cpp  SettingsDialog.h  TrayController.cpp  TrayController.h
src/ui/theme/: ResultCardTheme.cpp  ResultCardTheme.h
tests/: AiAssistPolicyTest.cpp  AiAssistServiceTest.cpp  CMakeLists.txt  E2eSmokeTest.cpp  ImagePreprocessorTest.cpp  LookupCoordinatorTest.cpp  OcrServiceTest.cpp  PhoneticExtractorTest.cpp  QueryHistoryServiceTest.cpp  ResultCardWidgetTest.cpp  SettingsServiceTest.cpp  StarDictBackendTest.cpp  WordNormalizerTest.cpp
tests/support/: LookupCoordinatorFixture.h
